src/main/java/com/github/cronsmith/antlr/YCronExpressionParser.java
/*
 * Copyright 2026 Fred Feng
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// Generated from YCronExpression.g4 by ANTLR 4.13.1

package com.github.cronsmith.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class YCronExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, INT_YEAR=19, INT=20, INT_L=21, SPACE=22;
	public static final int
		RULE_ycron = 0, RULE_second = 1, RULE_minute = 2, RULE_hour = 3, RULE_dayOfWeek = 4, 
		RULE_weekOfYear = 5, RULE_dayOfYear = 6, RULE_year = 7, RULE_secondField = 8, 
		RULE_minuteField = 9, RULE_hourField = 10, RULE_dayOfWeekField = 11, RULE_weekOfYearField = 12, 
		RULE_dayOfYearField = 13, RULE_yearField = 14, RULE_rangeWithStep = 15, 
		RULE_yearRangeWithStep = 16, RULE_range = 17, RULE_yearRange = 18, RULE_weekdayRangeWithStep = 19, 
		RULE_dayOfWeekNameLast = 20, RULE_dayOfWeekNameWithStep = 21, RULE_weekdayRange = 22, 
		RULE_dayOfWeekName = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"ycron", "second", "minute", "hour", "dayOfWeek", "weekOfYear", "dayOfYear", 
			"year", "secondField", "minuteField", "hourField", "dayOfWeekField", 
			"weekOfYearField", "dayOfYearField", "yearField", "rangeWithStep", "yearRangeWithStep", 
			"range", "yearRange", "weekdayRangeWithStep", "dayOfWeekNameLast", "dayOfWeekNameWithStep", 
			"weekdayRange", "dayOfWeekName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'*/'", "'/'", "'*'", "'#'", "'?'", "'L'", "'-'", "'W'", 
			"'LW'", "'L-'", "'SUN'", "'MON'", "'TUE'", "'WED'", "'THU'", "'FRI'", 
			"'SAT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "INT_YEAR", "INT", "INT_L", 
			"SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YCronExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YCronExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class YcronContext extends ParserRuleContext {
		public SecondContext second() {
			return getRuleContext(SecondContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(YCronExpressionParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(YCronExpressionParser.SPACE, i);
		}
		public MinuteContext minute() {
			return getRuleContext(MinuteContext.class,0);
		}
		public HourContext hour() {
			return getRuleContext(HourContext.class,0);
		}
		public DayOfWeekContext dayOfWeek() {
			return getRuleContext(DayOfWeekContext.class,0);
		}
		public WeekOfYearContext weekOfYear() {
			return getRuleContext(WeekOfYearContext.class,0);
		}
		public DayOfYearContext dayOfYear() {
			return getRuleContext(DayOfYearContext.class,0);
		}
		public TerminalNode EOF() { return getToken(YCronExpressionParser.EOF, 0); }
		public YearContext year() {
			return getRuleContext(YearContext.class,0);
		}
		public YcronContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ycron; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterYcron(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitYcron(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitYcron(this);
			else return visitor.visitChildren(this);
		}
	}

	public final YcronContext ycron() throws RecognitionException {
		YcronContext _localctx = new YcronContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ycron);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			second();
			setState(49);
			match(SPACE);
			setState(50);
			minute();
			setState(51);
			match(SPACE);
			setState(52);
			hour();
			setState(53);
			match(SPACE);
			setState(54);
			dayOfWeek();
			setState(55);
			match(SPACE);
			setState(56);
			weekOfYear();
			setState(57);
			match(SPACE);
			setState(58);
			dayOfYear();
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(59);
				match(SPACE);
				setState(60);
				year();
				}
				break;
			}
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(63);
				match(SPACE);
				}
			}

			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SecondContext extends ParserRuleContext {
		public List<SecondFieldContext> secondField() {
			return getRuleContexts(SecondFieldContext.class);
		}
		public SecondFieldContext secondField(int i) {
			return getRuleContext(SecondFieldContext.class,i);
		}
		public SecondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_second; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterSecond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitSecond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitSecond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SecondContext second() throws RecognitionException {
		SecondContext _localctx = new SecondContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_second);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			secondField();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(69);
				match(T__0);
				setState(70);
				secondField();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MinuteContext extends ParserRuleContext {
		public List<MinuteFieldContext> minuteField() {
			return getRuleContexts(MinuteFieldContext.class);
		}
		public MinuteFieldContext minuteField(int i) {
			return getRuleContext(MinuteFieldContext.class,i);
		}
		public MinuteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterMinute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitMinute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitMinute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MinuteContext minute() throws RecognitionException {
		MinuteContext _localctx = new MinuteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_minute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			minuteField();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(77);
				match(T__0);
				setState(78);
				minuteField();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HourContext extends ParserRuleContext {
		public List<HourFieldContext> hourField() {
			return getRuleContexts(HourFieldContext.class);
		}
		public HourFieldContext hourField(int i) {
			return getRuleContext(HourFieldContext.class,i);
		}
		public HourContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hour; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterHour(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitHour(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitHour(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HourContext hour() throws RecognitionException {
		HourContext _localctx = new HourContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_hour);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			hourField();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(85);
				match(T__0);
				setState(86);
				hourField();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DayOfWeekContext extends ParserRuleContext {
		public List<DayOfWeekFieldContext> dayOfWeekField() {
			return getRuleContexts(DayOfWeekFieldContext.class);
		}
		public DayOfWeekFieldContext dayOfWeekField(int i) {
			return getRuleContext(DayOfWeekFieldContext.class,i);
		}
		public DayOfWeekContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dayOfWeek; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterDayOfWeek(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitDayOfWeek(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitDayOfWeek(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DayOfWeekContext dayOfWeek() throws RecognitionException {
		DayOfWeekContext _localctx = new DayOfWeekContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dayOfWeek);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			dayOfWeekField();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(93);
				match(T__0);
				setState(94);
				dayOfWeekField();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WeekOfYearContext extends ParserRuleContext {
		public List<WeekOfYearFieldContext> weekOfYearField() {
			return getRuleContexts(WeekOfYearFieldContext.class);
		}
		public WeekOfYearFieldContext weekOfYearField(int i) {
			return getRuleContext(WeekOfYearFieldContext.class,i);
		}
		public WeekOfYearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_weekOfYear; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterWeekOfYear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitWeekOfYear(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitWeekOfYear(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WeekOfYearContext weekOfYear() throws RecognitionException {
		WeekOfYearContext _localctx = new WeekOfYearContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_weekOfYear);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			weekOfYearField();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(101);
				match(T__0);
				setState(102);
				weekOfYearField();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DayOfYearContext extends ParserRuleContext {
		public List<DayOfYearFieldContext> dayOfYearField() {
			return getRuleContexts(DayOfYearFieldContext.class);
		}
		public DayOfYearFieldContext dayOfYearField(int i) {
			return getRuleContext(DayOfYearFieldContext.class,i);
		}
		public DayOfYearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dayOfYear; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterDayOfYear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitDayOfYear(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitDayOfYear(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DayOfYearContext dayOfYear() throws RecognitionException {
		DayOfYearContext _localctx = new DayOfYearContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dayOfYear);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			dayOfYearField();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(109);
				match(T__0);
				setState(110);
				dayOfYearField();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class YearContext extends ParserRuleContext {
		public List<YearFieldContext> yearField() {
			return getRuleContexts(YearFieldContext.class);
		}
		public YearFieldContext yearField(int i) {
			return getRuleContext(YearFieldContext.class,i);
		}
		public YearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_year; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterYear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitYear(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitYear(this);
			else return visitor.visitChildren(this);
		}
	}

	public final YearContext year() throws RecognitionException {
		YearContext _localctx = new YearContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_year);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			yearField();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(117);
				match(T__0);
				setState(118);
				yearField();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SecondFieldContext extends ParserRuleContext {
		public RangeWithStepContext rangeWithStep() {
			return getRuleContext(RangeWithStepContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(YCronExpressionParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(YCronExpressionParser.INT, i);
		}
		public SecondFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secondField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterSecondField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitSecondField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitSecondField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SecondFieldContext secondField() throws RecognitionException {
		SecondFieldContext _localctx = new SecondFieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_secondField);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				rangeWithStep();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				range();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				match(T__1);
				setState(127);
				match(INT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				match(INT);
				setState(129);
				match(T__2);
				setState(130);
				match(INT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				match(T__3);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MinuteFieldContext extends ParserRuleContext {
		public RangeWithStepContext rangeWithStep() {
			return getRuleContext(RangeWithStepContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(YCronExpressionParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(YCronExpressionParser.INT, i);
		}
		public MinuteFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minuteField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterMinuteField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitMinuteField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitMinuteField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MinuteFieldContext minuteField() throws RecognitionException {
		MinuteFieldContext _localctx = new MinuteFieldContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_minuteField);
		try {
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				rangeWithStep();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				range();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				match(T__1);
				setState(138);
				match(INT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(139);
				match(INT);
				setState(140);
				match(T__2);
				setState(141);
				match(INT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(142);
				match(T__3);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(143);
				match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HourFieldContext extends ParserRuleContext {
		public RangeWithStepContext rangeWithStep() {
			return getRuleContext(RangeWithStepContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(YCronExpressionParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(YCronExpressionParser.INT, i);
		}
		public HourFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hourField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).enterHourField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YCronExpressionListener ) ((YCronExpressionListener)listener).exitHourField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YCronExpressionVisitor ) return ((YCronExpressionVisitor<? extends T>)visitor).visitHourField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HourFieldContext hourField() throws RecognitionException {
		HourFieldContext _localctx = new HourFieldContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_hourField);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				rangeWithStep();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				range();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				match(T__1);
				setState(149);
				match(INT);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				match(INT);
				setState(151);
				match(T__2);
				setState(152);
				match(INT);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(153);
				match(T__3);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(154);
				match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
